--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,18 +20,13 @@
 
 /* 6. Components - Reusable UI elements */
 @import './components.css';
-@import './cards.css';
 @import './header.css';
-@import './menus.css';
 
 /* 7. Theory and educational content */
-@import './theory.css';
+@import './theory-cards.css';
 
 /* 8. Games - Game-specific styles */
-@import './game-container.css';
-@import './bubble-game.css';
-@import './matching-game.css';
-@import './theme-selector.css';
+@import './games.css';
 
 /* 9. Modals - Overlay components */
 @import './modals.css';
